Feature/tfp 6407 (#717)
* TFP-6407: Behandler alle IM fra samme arbeidsgiver likt, ser ikke lenger på arbeidsforholdId