@@ -2,29 +2,39 @@ package no.nav.folketrygdloven.kalkulator.modell.iay;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import no.nav.folketrygdloven.kalkulator.modell.typer.Arbeidsgiver;
 import no.nav.folketrygdloven.kalkulator.modell.typer.InternArbeidsforholdRefDto;
 import no.nav.folketrygdloven.kalkulator.tid.Intervall;
 import no.nav.fpsak.tidsserie.LocalDateSegment;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
+import no.nav.fpsak.tidsserie.StandardCombinators;
 
 public class KravperioderPrArbeidsforholdDto {
 
     private final Arbeidsgiver arbeidsgiver;
 
-    private final InternArbeidsforholdRefDto arbeidsforholdRef;
+    @Deprecated(forRemoval = true) // Dette feltet skal fjernes da vi skal behandle alle inntektsmeldinger for samme arbeidsgiver likt
+    private InternArbeidsforholdRefDto arbeidsforholdRef;
 
     private final List<PerioderForKravDto> perioder;
 
     private List<Intervall> sisteSøktePerioder;
 
+    @Deprecated(forRemoval = true) // Fjern konstruktør med arbeidsforholdRef
     public KravperioderPrArbeidsforholdDto(Arbeidsgiver arbeidsgiver,
                                            InternArbeidsforholdRefDto arbeidsforholdRef, List<PerioderForKravDto> perioder,
                                            List<Intervall> sisteSøktePerioder) {
         this.arbeidsgiver = arbeidsgiver;
         this.arbeidsforholdRef = arbeidsforholdRef;
+        this.perioder = perioder;
+        this.sisteSøktePerioder = sisteSøktePerioder;
+    }
+
+    public KravperioderPrArbeidsforholdDto(Arbeidsgiver arbeidsgiver,
+                                           List<PerioderForKravDto> perioder,
+                                           List<Intervall> sisteSøktePerioder) {
+        this.arbeidsgiver = arbeidsgiver;
         this.perioder = perioder;
         this.sisteSøktePerioder = sisteSøktePerioder;
     }
@@ -54,14 +64,15 @@ public class KravperioderPrArbeidsforholdDto {
 
     public List<PerioderForKravDto> finnOverlappMedSisteKrav() {
         var sisteSøkteSegmenter = sisteSøktePerioder.stream()
-                .map(p -> new LocalDateSegment<>(p.getFomDato(), p.getTomDato(), true))
-                .collect(Collectors.toList());
-        var søktePerioderTimeline = new LocalDateTimeline<Boolean>(sisteSøkteSegmenter);
+                .map(p -> LocalDateSegment.emptySegment(p.getFomDato(), p.getTomDato()))
+                .toList();
+
+        var søktePerioderTimeline = new LocalDateTimeline<>(sisteSøkteSegmenter, StandardCombinators::leftOnly);
 
         return perioder.stream()
                 .map(p -> p.finnKravMedOverlappMedSisteSøkte(søktePerioderTimeline))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
