@@ -4,11 +4,13 @@ import static no.nav.fpsak.tidsserie.LocalDateInterval.TIDENES_ENDE;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 import no.nav.folketrygdloven.kalkulator.modell.iay.InntektArbeidYtelseGrunnlagDto;
+import no.nav.folketrygdloven.kalkulator.modell.iay.InntektsmeldingAggregatDto;
 import no.nav.folketrygdloven.kalkulator.modell.iay.InntektsmeldingDto;
 import no.nav.folketrygdloven.kalkulator.modell.iay.KravperioderPrArbeidsforholdDto;
 import no.nav.folketrygdloven.kalkulator.modell.iay.PerioderForKravDto;
@@ -22,36 +24,36 @@ import no.nav.fpsak.tidsserie.LocalDateTimeline;
 public class OpprettKravPerioderFraInntektsmeldingerForTest {
 
     public static List<KravperioderPrArbeidsforholdDto> opprett(InntektArbeidYtelseGrunnlagDto iayGrunnlag, LocalDate skjæringstidspunktBeregning) {
-        var perioderPrArbeidsgiver = lagKravperioderPrArbeidsforhold(iayGrunnlag, skjæringstidspunktBeregning);
-        return perioderPrArbeidsgiver;
+        return lagKravperioderPrArbeidsforhold(iayGrunnlag, skjæringstidspunktBeregning);
     }
 
     private static List<KravperioderPrArbeidsforholdDto> lagKravperioderPrArbeidsforhold(InntektArbeidYtelseGrunnlagDto iayGrunnlag, LocalDate skjæringstidspunktBeregning) {
-        List<KravperioderPrArbeidsforholdDto> perioderPrArbeidsgiver = new ArrayList<>();
-        iayGrunnlag.getInntektsmeldinger()
-                .stream()
-                .flatMap(im -> im.getAlleInntektsmeldinger().stream())
-                .forEach(im -> {
-                    var perioderForKravDto = lagPerioderForKrav(im, skjæringstidspunktBeregning, skjæringstidspunktBeregning);
-                    lagNyEllerLeggTilEksisterende(perioderPrArbeidsgiver, im, perioderForKravDto);
-                });
-        return perioderPrArbeidsgiver;
+        var agImMap = getArbeidsgiverImMap(iayGrunnlag);
+        return agImMap.entrySet().stream()
+            .map(entry -> {
+                var refusjonPerioder = entry.getValue()
+                    .stream()
+                    .map(im -> lagPerioderForKrav(im, skjæringstidspunktBeregning, skjæringstidspunktBeregning))
+                    .toList();
+                var perioder = refusjonPerioder.stream()
+                    .map(PerioderForKravDto::getPerioder)
+                    .flatMap(Collection::stream)
+                    .map(RefusjonsperiodeDto::periode)
+                    .toList();
+                return new KravperioderPrArbeidsforholdDto(entry.getKey(), refusjonPerioder, perioder);
+            }).toList();
     }
 
-    private static void lagNyEllerLeggTilEksisterende(List<KravperioderPrArbeidsforholdDto> perioderPrArbeidsgiver, InntektsmeldingDto im, PerioderForKravDto perioderForKravDto) {
-        var eksisterende = perioderPrArbeidsgiver.stream().filter(k -> k.getArbeidsgiver().getIdentifikator().equals(im.getArbeidsgiver().getIdentifikator()) &&
-                        k.getArbeidsforholdRef().gjelderFor(im.getArbeidsforholdRef()))
-                .findFirst();
-        eksisterende.ifPresentOrElse(e -> e.getPerioder().add(perioderForKravDto),
-                () -> perioderPrArbeidsgiver.add(new KravperioderPrArbeidsforholdDto(im.getArbeidsgiver(),
-                        im.getArbeidsforholdRef(),
-                        List.of(perioderForKravDto),
-                        perioderForKravDto.getPerioder().stream().map(RefusjonsperiodeDto::periode).collect(Collectors.toList()))));
+    private static Map<Arbeidsgiver, List<InntektsmeldingDto>> getArbeidsgiverImMap(InntektArbeidYtelseGrunnlagDto iayGrunnlag) {
+        return iayGrunnlag.getInntektsmeldinger()
+            .map(InntektsmeldingAggregatDto::getAlleInntektsmeldinger)
+            .orElse(List.of())
+            .stream()
+            .collect(Collectors.groupingBy(InntektsmeldingDto::getArbeidsgiver));
     }
 
     private static PerioderForKravDto lagPerioderForKrav(InntektsmeldingDto im, LocalDate innsendingsdato, LocalDate skjæringstidspunktBeregning) {
-        var perioderForKravDto = new PerioderForKravDto(innsendingsdato, lagPerioder(im, skjæringstidspunktBeregning));
-        return perioderForKravDto;
+        return new PerioderForKravDto(innsendingsdato, lagPerioder(im, skjæringstidspunktBeregning));
     }
 
     private static List<RefusjonsperiodeDto> lagPerioder(InntektsmeldingDto im, LocalDate skjæringstidspunktBeregning) {
@@ -63,7 +65,7 @@ public class OpprettKravPerioderFraInntektsmeldingerForTest {
 
         alleSegmenter.addAll(im.getEndringerRefusjon().stream().map(e ->
                 new LocalDateSegment<>(e.getFom(), TIDENES_ENDE, e.getRefusjonsbeløp())
-        ).collect(Collectors.toList()));
+        ).toList());
 
         var refusjonTidslinje = new LocalDateTimeline<>(alleSegmenter, (interval, lhs, rhs) -> {
             if (lhs.getFom().isBefore(rhs.getFom())) {
@@ -74,27 +76,21 @@ public class OpprettKravPerioderFraInntektsmeldingerForTest {
 
         return refusjonTidslinje.stream()
                 .map(r -> new RefusjonsperiodeDto(Intervall.fraOgMedTilOgMed(r.getFom(), r.getTom()), r.getValue()))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     public static List<KravperioderPrArbeidsforholdDto> opprett(InntektArbeidYtelseGrunnlagDto iayGrunnlag,
                                                                 LocalDate skjæringstidspunktBeregning, Map<Arbeidsgiver, LocalDate> førsteInnsendingsdatoMap) {
-        return lagKravperioderPrArbeidsforhold(iayGrunnlag, førsteInnsendingsdatoMap, skjæringstidspunktBeregning);
+        var arbeidsgiverImMap = getArbeidsgiverImMap(iayGrunnlag);
+        return arbeidsgiverImMap.entrySet().stream()
+            .map(entry -> {
+                var refusjonPerioder = entry.getValue()
+                    .stream()
+                    .map(im -> lagPerioderForKrav(im, førsteInnsendingsdatoMap.get(entry.getKey()), skjæringstidspunktBeregning))
+                    .toList();
+                var perioder = refusjonPerioder.stream().map(PerioderForKravDto::getPerioder).flatMap(Collection::stream).toList();
+                return new KravperioderPrArbeidsforholdDto(entry.getKey(), refusjonPerioder, perioder.stream().map(RefusjonsperiodeDto::periode).toList());
+            }).toList();
     }
-
-    private static List<KravperioderPrArbeidsforholdDto> lagKravperioderPrArbeidsforhold(InntektArbeidYtelseGrunnlagDto iayGrunnlag,
-                                                                                         Map<Arbeidsgiver, LocalDate> førsteInnsendingsdatoMap,
-                                                                                         LocalDate skjæringstidspunktBeregning) {
-        List<KravperioderPrArbeidsforholdDto> perioderPrArbeidsgiver = new ArrayList<>();
-        iayGrunnlag.getInntektsmeldinger()
-                .stream()
-                .flatMap(im -> im.getAlleInntektsmeldinger().stream())
-                .forEach(im -> {
-                    var perioderForKravDto = lagPerioderForKrav(im, førsteInnsendingsdatoMap.get(im.getArbeidsgiver()), skjæringstidspunktBeregning);
-                    lagNyEllerLeggTilEksisterende(perioderPrArbeidsgiver, im, perioderForKravDto);
-                });
-        return perioderPrArbeidsgiver;
-    }
-
 }
